# bigmath

./: .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES.md  conanfile.py  dockerpack.yml  publish_local.sh
.circleci/: conan_deps.sh  config.yml  deploy.sh  deploy_win.bat  package.sh  setup.sh  test.sh
cfg/: bigmath-config.cmake.in  bigmath_config.h.in  make_package.sh  package_make.sh  package_upload.sh
include/bigmath/: bd_context.h  bigdecimal.h  bigint.h  errors.h  mpalloc.h  mpdecimal_backport.h  typearith.h  utils.h
modules/: FindBigMath.cmake  FindGMP.cmake  FindLinuxPlatform.cmake  FindMPDECIMAL.cmake  FindMPIR.cmake  SystemDetector.cmake  compilers_flags.cmake  package.cmake
src/: bd_context.cpp  bigdecimal.cpp  bigint.cpp  mpalloc.cpp  mpdecimal_backport.cpp
tests/: bigdecimal_test.cpp  bigint_test.cpp
